raylib/src/raygui.h

typedef enum { false, true } bool;
// Vector3 type
typedef struct Vector3 {
	float x;
	float y;
	float z;
} Vector3;
// Color type, RGBA (32bit)
typedef struct Color {
	unsigned char r;
	unsigned char g;
	unsigned char b;
	unsigned char a;
} Color;
// Rectangle type
typedef struct Rectangle {
	int x;
	int y;
	int width;
	int height;
} Rectangle;
// Font type
// NOTE: It should be provided by user
typedef struct Font Font;
// Gui control text alignment
typedef enum {
	GUI_TEXT_ALIGN_LEFT = 0,
	GUI_TEXT_ALIGN_CENTER,
	GUI_TEXT_ALIGN_RIGHT,
} GuiTextAlignment;
// Gui controls
typedef enum {
	DEFAULT = 0,
	LABEL,          // LABELBUTTON
	BUTTON,         // IMAGEBUTTON
	TOGGLE,         // TOGGLEGROUP
	SLIDER,         // SLIDERBAR
	PROGRESSBAR,
	CHECKBOX,
	COMBOBOX,
	DROPDOWNBOX,
	TEXTBOX,        // TEXTBOXMULTI
	VALUEBOX,
	SPINNER,
	LISTVIEW,
	COLORPICKER,
	SCROLLBAR,
	RESERVED
} GuiControl;
// Gui base properties for every control
typedef enum {
	BORDER_COLOR_NORMAL = 0,
	BASE_COLOR_NORMAL,
	TEXT_COLOR_NORMAL,
	BORDER_COLOR_FOCUSED,
	BASE_COLOR_FOCUSED,
	TEXT_COLOR_FOCUSED,
	BORDER_COLOR_PRESSED,
	BASE_COLOR_PRESSED,
	TEXT_COLOR_PRESSED,
	BORDER_COLOR_DISABLED,
	BASE_COLOR_DISABLED,
	TEXT_COLOR_DISABLED,
	BORDER_WIDTH,
	INNER_PADDING,
	TEXT_ALIGNMENT,
	RESERVED02
} GuiControlProperty;
// Gui extended properties depend on control
// NOTE: We reserve a fixed size of additional properties per control

// DEFAULT properties
typedef enum {
	TEXT_SIZE = 16,
	TEXT_SPACING,
	LINE_COLOR,
	BACKGROUND_COLOR,
} GuiDefaultProperty;
// Label
//typedef enum { } GuiLabelProperty;

// Button
//typedef enum { } GuiButtonProperty;

// Toggle / ToggleGroup
typedef enum {
	GROUP_PADDING = 16,
} GuiToggleProperty;
// Slider / SliderBar
typedef enum {
	SLIDER_WIDTH = 16,
	TEXT_PADDING
} GuiSliderProperty;
// ProgressBar
//typedef enum { } GuiProgressBarProperty;

// CheckBox
typedef enum {
	CHECK_TEXT_PADDING = 16
} GuiCheckBoxProperty;
// ComboBox
typedef enum {
	SELECTOR_WIDTH = 16,
	SELECTOR_PADDING
} GuiComboBoxProperty;
// DropdownBox
typedef enum {
	ARROW_RIGHT_PADDING = 16,
	ITEMS_PADDING
} GuiDropdownBoxProperty;
// TextBox / TextBoxMulti / ValueBox / Spinner
typedef enum {
	MULTILINE_PADDING = 16,
	COLOR_SELECTED_FG,
	COLOR_SELECTED_BG
} GuiTextBoxProperty;
typedef enum {
	SELECT_BUTTON_WIDTH = 16,
	SELECT_BUTTON_PADDING,
	SELECT_BUTTON_BORDER_WIDTH
} GuiSpinnerProperty;
// ScrollBar
typedef enum {
	ARROWS_SIZE = 16,
	SLIDER_PADDING,
	SLIDER_SIZE,
	SCROLL_SPEED,
	ARROWS_VISIBLE
} GuiScrollBarProperty;
// ScrollBar side
typedef enum {
	SCROLLBAR_LEFT_SIDE = 0,
	SCROLLBAR_RIGHT_SIDE
} GuiScrollBarSide;
// ListView
typedef enum {
	ELEMENTS_HEIGHT = 16,
	ELEMENTS_PADDING,
	SCROLLBAR_WIDTH,
	SCROLLBAR_SIDE,             // This property defines vertical scrollbar side (SCROLLBAR_LEFT_SIDE or SCROLLBAR_RIGHT_SIDE)
} GuiListViewProperty;
// ColorPicker
typedef enum {
	COLOR_SELECTOR_SIZE = 16,
	BAR_WIDTH,                  // Lateral bar width
	BAR_PADDING,                // Lateral bar separation from panel
	BAR_SELECTOR_HEIGHT,        // Lateral bar selector height
	BAR_SELECTOR_PADDING        // Lateral bar selector outer padding
} GuiColorPickerProperty;
RAYGUIDEF int GuiTextInputBox(Rectangle bounds, const char *windowTitle, char *text, const char *buttons);              // Text Input Box control, ask for text
RAYGUIDEF Color GuiColorPicker(Rectangle bounds, Color color);                                          // Color Picker control
// Styles loading functions
RAYGUIDEF void GuiLoadStyle(const char *fileName);              // Load style file (.rgs)
RAYGUIDEF void GuiLoadStyleProps(const int *props, int count);  // Load style properties from array
RAYGUIDEF void GuiLoadStyleDefault(void);                       // Load style default over global style
RAYGUIDEF void GuiUpdateStyleComplete(void);                    // Updates full style properties set with default values
/*
typedef GuiStyle (unsigned int *)
RAYGUIDEF GuiStyle LoadGuiStyle(const char *fileName);          // Load style from file (.rgs)
RAYGUIDEF void UnloadGuiStyle(GuiStyle style);                  // Unload style
*/

RAYGUIDEF const char *GuiIconText(int iconId, const char *text); // Get text with icon id prepended
// TODO: Color GuiColorBarSat() [WHITE->color]
// TODO: Color GuiColorBarValue() [BLACK->color], HSV / HSL
// TODO: float GuiColorBarLuminance() [BLACK->WHITE]

// Color Picker control
// NOTE: It's divided in multiple controls:
//      Color GuiColorPanel() - Color select panel
//      float GuiColorBarAlpha(Rectangle bounds, float alpha)
//      float GuiColorBarHue(Rectangle bounds, float value)
// NOTE: bounds define GuiColorPanel() size
RAYGUIDEF Color GuiColorPicker(Rectangle bounds, Color color) {
	color = GuiColorPanel(bounds, color);

	Rectangle boundsHue = { (float)bounds.x + bounds.width + GuiGetStyle(COLORPICKER, BAR_PADDING), (float)bounds.y, (float)GuiGetStyle(COLORPICKER, BAR_WIDTH), (float)bounds.height };
	//Rectangle boundsAlpha = { bounds.x, bounds.y + bounds.height + GuiGetStyle(COLORPICKER, BARS_PADDING), bounds.width, GuiGetStyle(COLORPICKER, BARS_THICK) };

	Vector3 hsv = ConvertRGBtoHSV(RAYGUI_CLITERAL(Vector3) { color.r / 255.0f, color.g / 255.0f, color.b / 255.0f });
	hsv.x = GuiColorBarHue(boundsHue, hsv.x);
	//color.a = (unsigned char)(GuiColorBarAlpha(boundsAlpha, (float)color.a/255.0f)*255.0f);
	Vector3 rgb = ConvertHSVtoRGB(hsv);
	color = RAYGUI_CLITERAL(Color) { (unsigned char)(rgb.x*255.0f), (unsigned char)(rgb.y*255.0f), (unsigned char)(rgb.z*255.0f), color.a };

	return color;
}
// Text Input Box control, ask for text
RAYGUIDEF int GuiTextInputBox(Rectangle bounds, const char *windowTitle, char *text, const char *buttons) {
#define TEXTINPUTBOX_BUTTON_HEIGHT      24
#define TEXTINPUTBOX_BUTTON_PADDING     10
#define TEXTINPUTBOX_HEIGHT             30

	int btnIndex = -1;

	int buttonsCount = 0;
	const char **buttonsText = GuiTextSplit(buttons, &buttonsCount, NULL);
	Rectangle buttonBounds = { 0 };
	buttonBounds.x = bounds.x + TEXTINPUTBOX_BUTTON_PADDING;
	buttonBounds.y = bounds.y + bounds.height - TEXTINPUTBOX_BUTTON_HEIGHT - TEXTINPUTBOX_BUTTON_PADDING;
	buttonBounds.width = (bounds.width - TEXTINPUTBOX_BUTTON_PADDING * (buttonsCount + 1)) / buttonsCount;
	buttonBounds.height = TEXTINPUTBOX_BUTTON_HEIGHT;

	Rectangle textBoxBounds = { 0 };
	textBoxBounds.x = bounds.x + TEXTINPUTBOX_BUTTON_PADDING;
	textBoxBounds.y = bounds.y + WINDOW_STATUSBAR_HEIGHT + (bounds.height - WINDOW_STATUSBAR_HEIGHT - TEXTINPUTBOX_BUTTON_HEIGHT - TEXTINPUTBOX_BUTTON_PADDING) / 2 - TEXTINPUTBOX_HEIGHT / 2;
	textBoxBounds.width = bounds.width - TEXTINPUTBOX_BUTTON_PADDING * 2;
	textBoxBounds.height = TEXTINPUTBOX_HEIGHT;

	// Draw control
	//--------------------------------------------------------------------
	if (GuiWindowBox(bounds, windowTitle)) btnIndex = 0;

	GuiTextBox(textBoxBounds, text, 256, true);

	int prevBtnTextAlignment = GuiGetStyle(BUTTON, TEXT_ALIGNMENT);
	GuiSetStyle(BUTTON, TEXT_ALIGNMENT, GUI_TEXT_ALIGN_CENTER);

	for (int i = 0; i < buttonsCount; i++) {
		if (GuiButton(buttonBounds, buttonsText[i])) btnIndex = i + 1;
		buttonBounds.x += (buttonBounds.width + MESSAGEBOX_BUTTON_PADDING);
	}

	GuiSetStyle(BUTTON, TEXT_ALIGNMENT, prevBtnTextAlignment);
	//--------------------------------------------------------------------

	return btnIndex;
}
//----------------------------------------------------------------------------------
// Styles loading functions
//----------------------------------------------------------------------------------

// Load raygui style file (.rgs)
RAYGUIDEF void GuiLoadStyle(const char *fileName) {
	bool tryBinary = false;

	// Try reading the files as text file first
	FILE *rgsFile = fopen(fileName, "rt");

	if (rgsFile != NULL) {
		char buffer[256] = { 0 };
		fgets(buffer, 256, rgsFile);

		if (buffer[0] == '#') {
			int controlId = 0;
			int propertyId = 0;
			int propertyValue = 0;

			while (!feof(rgsFile)) {
				switch (buffer[0]) {
				case 'p':
				{
					sscanf(buffer, "p %d %d 0x%x", &controlId, &propertyId, &propertyValue);

					if (controlId == 0) // DEFAULT control
					{
						// If a DEFAULT property is loaded, it is propagated to all controls,
						// NOTE: All DEFAULT properties should be defined first in the file
						GuiSetStyle(0, propertyId, propertyValue);

						if (propertyId < NUM_PROPS_DEFAULT) for (int i = 1; i < NUM_CONTROLS; i++) GuiSetStyle(i, propertyId, propertyValue);
					} else GuiSetStyle(controlId, propertyId, propertyValue);

				} break;
				case 'f':
				{
					int fontSize = 0;
					int fontSpacing = 0;
					char fontFileName[256] = { 0 };
					sscanf(buffer, "f %d %d %[^\n]s", &fontSize, &fontSpacing, fontFileName);

					Font font = LoadFontEx(FormatText("%s/%s", GetDirectoryPath(fileName), fontFileName), fontSize, NULL, 0);

					if ((font.texture.id > 0) && (font.charsCount > 0)) {
						GuiFont(font);
						GuiSetStyle(DEFAULT, TEXT_SIZE, fontSize);
						GuiSetStyle(DEFAULT, TEXT_SPACING, fontSpacing);
					}
				} break;
				default: break;
				}

				fgets(buffer, 256, rgsFile);
			}
		} else tryBinary = true;

		fclose(rgsFile);
	} else return;

	if (tryBinary) {
		rgsFile = fopen(fileName, "rb");

		if (rgsFile == NULL) return;

		char signature[5] = "";
		short version = 0;
		short reserved = 0;
		int propertiesCount = 0;

		fread(signature, 1, 4, rgsFile);
		fread(&version, 1, sizeof(short), rgsFile);
		fread(&reserved, 1, sizeof(short), rgsFile);
		fread(&propertiesCount, 1, sizeof(int), rgsFile);

		if ((signature[0] == 'r') &&
			(signature[1] == 'G') &&
			(signature[2] == 'S') &&
			(signature[3] == ' ')) {
			short controlId = 0;
			short propertyId = 0;
			int propertyValue = 0;

			for (int i = 0; i < propertiesCount; i++) {
				fread(&controlId, 1, sizeof(short), rgsFile);
				fread(&propertyId, 1, sizeof(short), rgsFile);
				fread(&propertyValue, 1, sizeof(int), rgsFile);

				if (controlId == 0) // DEFAULT control
				{
					// If a DEFAULT property is loaded, it is propagated to all controls
					// NOTE: All DEFAULT properties should be defined first in the file
					GuiSetStyle(0, (int)propertyId, propertyValue);

					if (propertyId < NUM_PROPS_DEFAULT) for (int i = 1; i < NUM_CONTROLS; i++) GuiSetStyle(i, (int)propertyId, propertyValue);
				} else GuiSetStyle((int)controlId, (int)propertyId, propertyValue);
			}

			// Font loading is highly dependant on raylib API to load font data and image
			// TODO: Find some mechanism to support it in standalone mode
#if !defined(RAYGUI_STANDALONE)
			// Load custom font if available
			int fontDataSize = 0;
			fread(&fontDataSize, 1, sizeof(int), rgsFile);

			if (fontDataSize > 0) {
				Font font = { 0 };
				int fontType = 0;   // 0-Normal, 1-SDF
				Rectangle whiteRec = { 0 };

				fread(&font.baseSize, 1, sizeof(int), rgsFile);
				fread(&font.charsCount, 1, sizeof(int), rgsFile);
				fread(&fontType, 1, sizeof(int), rgsFile);

				// Load font white rectangle
				fread(&whiteRec, 1, sizeof(Rectangle), rgsFile);

				// Load font image parameters
				int fontImageSize = 0;
				fread(&fontImageSize, 1, sizeof(int), rgsFile);

				if (fontImageSize > 0) {
					Image imFont = { 0 };
					imFont.mipmaps = 1;
					fread(&imFont.width, 1, sizeof(int), rgsFile);
					fread(&imFont.height, 1, sizeof(int), rgsFile);
					fread(&imFont.format, 1, sizeof(int), rgsFile);

					imFont.data = (unsigned char *)malloc(fontImageSize);
					fread(imFont.data, 1, fontImageSize, rgsFile);

					font.texture = LoadTextureFromImage(imFont);

					UnloadImage(imFont);
				}

				// Load font chars data
				font.chars = (CharInfo *)calloc(font.charsCount, sizeof(CharInfo));
				for (int i = 0; i < font.charsCount; i++) {
					fread(&font.recs[i], 1, sizeof(Rectangle), rgsFile);
					fread(&font.chars[i].value, 1, sizeof(int), rgsFile);
					fread(&font.chars[i].offsetX, 1, sizeof(int), rgsFile);
					fread(&font.chars[i].offsetY, 1, sizeof(int), rgsFile);
					fread(&font.chars[i].advanceX, 1, sizeof(int), rgsFile);
				}

				GuiFont(font);

				// Set font texture source rectangle to be used as white texture to draw shapes
				// NOTE: This way, all gui can be draw using a single draw call
				if ((whiteRec.width != 0) && (whiteRec.height != 0)) SetShapesTexture(font.texture, whiteRec);
			}
#endif
		}

		fclose(rgsFile);
	}
}
// Load style from a palette values array
RAYGUIDEF void GuiLoadStyleProps(const int *props, int count) {
	int completeSets = count / (NUM_PROPS_DEFAULT + NUM_PROPS_EXTENDED);
	int uncompleteSetProps = count % (NUM_PROPS_DEFAULT + NUM_PROPS_EXTENDED);

	// Load style palette values from array (complete property sets)
	for (int i = 0; i < completeSets; i++) {
		for (int j = 0; j < (NUM_PROPS_DEFAULT + NUM_PROPS_EXTENDED); j++) GuiSetStyle(i, j, props[i]);
	}

	// Load style palette values from array (uncomplete property set)
	for (int k = 0; k < uncompleteSetProps; k++) GuiSetStyle(completeSets, k, props[completeSets*(NUM_PROPS_DEFAULT + NUM_PROPS_EXTENDED) + k]);
}
// Load style default over global style
RAYGUIDEF void GuiLoadStyleDefault(void) {
	// We set this variable first to avoid cyclic function calls
	// when calling GuiSetStyle() and GuiGetStyle()
	guiStyleLoaded = true;

	// Initialize default LIGHT style property values
	GuiSetStyle(DEFAULT, BORDER_COLOR_NORMAL, 0x838383ff);
	GuiSetStyle(DEFAULT, BASE_COLOR_NORMAL, 0xc9c9c9ff);
	GuiSetStyle(DEFAULT, TEXT_COLOR_NORMAL, 0x686868ff);
	GuiSetStyle(DEFAULT, BORDER_COLOR_FOCUSED, 0x5bb2d9ff);
	GuiSetStyle(DEFAULT, BASE_COLOR_FOCUSED, 0xc9effeff);
	GuiSetStyle(DEFAULT, TEXT_COLOR_FOCUSED, 0x6c9bbcff);
	GuiSetStyle(DEFAULT, BORDER_COLOR_PRESSED, 0x0492c7ff);
	GuiSetStyle(DEFAULT, BASE_COLOR_PRESSED, 0x97e8ffff);
	GuiSetStyle(DEFAULT, TEXT_COLOR_PRESSED, 0x368bafff);
	GuiSetStyle(DEFAULT, BORDER_COLOR_DISABLED, 0xb5c1c2ff);
	GuiSetStyle(DEFAULT, BASE_COLOR_DISABLED, 0xe6e9e9ff);
	GuiSetStyle(DEFAULT, TEXT_COLOR_DISABLED, 0xaeb7b8ff);
	GuiSetStyle(DEFAULT, BORDER_WIDTH, 1);
	GuiSetStyle(DEFAULT, INNER_PADDING, 1);
	GuiSetStyle(DEFAULT, TEXT_ALIGNMENT, GUI_TEXT_ALIGN_CENTER);

	// Populate all controls with default style
	for (int i = 1; i < NUM_CONTROLS; i++) {
		for (int j = 0; j < NUM_PROPS_DEFAULT; j++) GuiSetStyle(i, j, GuiGetStyle(DEFAULT, j));
	}

	guiFont = GetFontDefault();     // Initialize default font

	// Initialize extended property values
	// NOTE: By default, extended property values are initialized to 0
	GuiSetStyle(DEFAULT, TEXT_SIZE, 10);
	GuiSetStyle(DEFAULT, TEXT_SPACING, 1);
	GuiSetStyle(DEFAULT, LINE_COLOR, 0x90abb5ff);           // DEFAULT specific property
	GuiSetStyle(DEFAULT, BACKGROUND_COLOR, 0xf5f5f5ff);     // DEFAULT specific property

	GuiSetStyle(LABEL, TEXT_ALIGNMENT, GUI_TEXT_ALIGN_LEFT);
	GuiSetStyle(BUTTON, BORDER_WIDTH, 2);
	GuiSetStyle(BUTTON, INNER_PADDING, 4);
	GuiSetStyle(TOGGLE, GROUP_PADDING, 2);
	GuiSetStyle(SLIDER, SLIDER_WIDTH, 15);
	GuiSetStyle(SLIDER, TEXT_PADDING, 5);
	GuiSetStyle(CHECKBOX, CHECK_TEXT_PADDING, 5);
	GuiSetStyle(COMBOBOX, SELECTOR_WIDTH, 30);
	GuiSetStyle(COMBOBOX, SELECTOR_PADDING, 2);
	GuiSetStyle(DROPDOWNBOX, ARROW_RIGHT_PADDING, 16);
	GuiSetStyle(DROPDOWNBOX, ITEMS_PADDING, 2);
	GuiSetStyle(TEXTBOX, INNER_PADDING, 4);
	GuiSetStyle(TEXTBOX, TEXT_ALIGNMENT, GUI_TEXT_ALIGN_LEFT);
	GuiSetStyle(TEXTBOX, MULTILINE_PADDING, 5);
	GuiSetStyle(TEXTBOX, COLOR_SELECTED_FG, 0xf0fffeff);
	GuiSetStyle(TEXTBOX, COLOR_SELECTED_BG, 0x839affe0);
	GuiSetStyle(VALUEBOX, TEXT_ALIGNMENT, GUI_TEXT_ALIGN_CENTER);
	GuiSetStyle(SPINNER, SELECT_BUTTON_WIDTH, 20);
	GuiSetStyle(SPINNER, SELECT_BUTTON_PADDING, 2);
	GuiSetStyle(SPINNER, SELECT_BUTTON_BORDER_WIDTH, 1);
	GuiSetStyle(SCROLLBAR, BORDER_WIDTH, 0);
	GuiSetStyle(SCROLLBAR, ARROWS_VISIBLE, 0);
	GuiSetStyle(SCROLLBAR, INNER_PADDING, 0);
	GuiSetStyle(SCROLLBAR, ARROWS_SIZE, 6);
	GuiSetStyle(SCROLLBAR, SLIDER_PADDING, 0);
	GuiSetStyle(SCROLLBAR, SLIDER_SIZE, 16);
	GuiSetStyle(SCROLLBAR, SCROLL_SPEED, 10);
	GuiSetStyle(LISTVIEW, ELEMENTS_HEIGHT, 0x1e);
	GuiSetStyle(LISTVIEW, ELEMENTS_PADDING, 2);
	GuiSetStyle(LISTVIEW, SCROLLBAR_WIDTH, 10);
	GuiSetStyle(LISTVIEW, SCROLLBAR_SIDE, SCROLLBAR_RIGHT_SIDE);
	GuiSetStyle(COLORPICKER, COLOR_SELECTOR_SIZE, 6);
	GuiSetStyle(COLORPICKER, BAR_WIDTH, 0x14);
	GuiSetStyle(COLORPICKER, BAR_PADDING, 0xa);
	GuiSetStyle(COLORPICKER, BAR_SELECTOR_HEIGHT, 6);
	GuiSetStyle(COLORPICKER, BAR_SELECTOR_PADDING, 2);
}
// Updates controls style with default values
RAYGUIDEF void GuiUpdateStyleComplete(void) {
	// Populate all controls with default style
	// NOTE: Extended style properties are ignored
	for (int i = 1; i < NUM_CONTROLS; i++) {
		for (int j = 0; j < NUM_PROPS_DEFAULT; j++) GuiSetStyle(i, j, GuiGetStyle(DEFAULT, j));
	}
}
// Get text with icon id prepended
// NOTE: Useful to add icons by name id (enum) instead of
// a number that can change between ricon versions
RAYGUIDEF const char *GuiIconText(int iconId, const char *text) {
#if defined(RAYGUI_SUPPORT_RICONS)
	static char buffer[1024] = { 0 };
	memset(buffer, 0, 1024);

	sprintf(buffer, "#%03i#", iconId);

	if (text != NULL) {
		for (int i = 5; i < 1024; i++) {
			buffer[i] = text[i - 5];
			if (text[i - 5] == '\0') break;
		}
	}

	return buffer;
#else
	return NULL;
#endif
}