RaylibSharp/Raygui.cs


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GuiTextInputBox(Rectangle bounds, string windowTitle, char* text, string buttons);              // Text Input Box control, ask for text

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Color GuiColorPicker(Rectangle bounds, Color color);                                          // Color Picker control

		// Styles loading functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void GuiLoadStyle(string fileName);              // Load style file (.rgs)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void GuiLoadStyleProps(int* props, int count);  // Load style properties from array

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void GuiLoadStyleDefault();                       // Load style default over global style

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void GuiUpdateStyleComplete();                    // Updates full style properties set with default values


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GuiIconText(int iconId, string text); // Get text with icon id prepended
	}
}
